--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Lorem ipsum, dolor sit amet.</p>
 
         <div class="btn">
-            <a href="han.html">Han</a>
+            <a href="han1.html">Han</a>
             <a href="nahi1.html">Nahi</a>
         </div>
     </div>
